<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="25dp"
            android:padding="48dp"
            android:layout_gravity="center"
            android:textStyle="italic"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="20dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textSize="20dp"
                android:textStyle="normal"
                android:id="@+id/name"
                android:inputType="textPersonName"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido"
                android:textSize="20dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textSize="20dp"
                android:textStyle="normal"
                android:id="@+id/lastname"
                android:inputType="textPersonName"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ID"
                android:textSize="20dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textSize="20dp"
                android:textStyle="normal"
                android:id="@+id/n_ID"
                android:inputType="number"
                android:maxLength="10"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textSize="20dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:onClick="selecciongenero">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femenino"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:onClick="selecciongenero"
                android:id="@+id/s_f"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:onClick="selecciongenero"
                android:id="@+id/s_m"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textSize="20dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"/>
            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:scrollbarStyle="outsideOverlay"
                android:id="@+id/fecha"
                ></DatePicker>

                />

        </LinearLayout>
        <EditText
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:textSize="20dp"
            android:textStyle="normal"
            android:id="@+id/F_number"
            android:inputType="number"
            android:maxLength="10"
            android:enabled="false"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ciudad"
                android:textSize="20dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"/>
            <Spinner
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:entries="@array/valores_array"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"

                >
            </Spinner>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaje"
            android:textSize="20dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Deporte"
                android:textSize="20dp"
                android:id="@+id/s_1"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Escuchar musica"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:textSize="20dp"
                android:id="@+id/s_2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dormir"
                android:textSize="20dp"
                android:id="@+id/s_3"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Leer"
                android:layout_marginLeft="40dp"
                android:textSize="20dp"
                android:id="@+id/s_4"
                />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="20dp"
            android:id="@+id/s_conf"/>

    </LinearLayout>



</ScrollView>
